tests/compile_fail/state/state_has_generic_params.stderr
error: `moku::State`s must not have generic parameters
  --> tests/compile_fail/state/state_has_generic_params.rs:18:36
   |
18 |     impl<T> State<BlinkyState> for Bottom<T> {}
   |                                    ^^^^^^
